# focus-task

./: .env.docker.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  start.sh
.github/workflows/: docker.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  admin_users.py  alembic.ini  app_server.py  auth.py  bootstrap.py  config.py  database.py  main.py  migrations.py  models.py  requirements.txt  run_legacy_migration.py  schemas.py  time_utils.py
backend/alembic/: env.py
backend/alembic/versions/: 20260612_0001_baseline.py  20260612_0002_task_schedule_notifications.py  20260715_0003_user_admin_flags.py
backend/routers/: auth.py  backups.py  tasks.py  users.py
backend/tests/: test_sync.py
docs/: docker-deploy.md  system-features.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: index.ts
frontend/src/components/: DetailPanel.vue  QuadrantCard.vue  Sidebar.vue  TaskItem.vue
frontend/src/composables/: useTaskFilter.ts  useTheme.ts
frontend/src/router/: index.ts
frontend/src/stores/: authStore.ts  settingsStore.ts  syncStore.test.ts  syncStore.ts  taskStore.test.ts  taskStore.ts
frontend/src/utils/: clientId.test.ts  clientId.ts  dateTime.ts  notifications.ts  (+2 more)
scripts/: e2e-smoke.mjs  package-mac.sh
(+8 files in other folders)
