[package]
name = "focus-task"
version = "0.1.0"
description = "Focus Task — 聚焦任务"
authors = ["you"]
edition = "2021"

[lib]
name = "focus_task_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
